@@ -1,3 +1,9 @@
+Fri Jul 27 12:33:52 EDT 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/extensions.c xsltproc/xsltproc.c: quick cleanup
+	  of memory allocations, raise a bug in the test suite, also
+	  need to be centralized as a single cleanup function.
+
 Fri Jul 27 10:50:39 EDT 2001 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/transform.[ch]: applied changes from Tom Moog #58002
